Draw feature image replaced.
Now we use an icon with the same visual style
as the other ones.

--- a/src/Control/DrawFeature/DrawFeature.css
+++ b/src/Control/DrawFeature/DrawFeature.css
@@ -11,7 +11,7 @@ height: 24px;
 width: 24px;
 line-height: 19px;
 background: rgb(0, 0, 0);
-background-image: url("images/add_point_on.png");
+background-image: url("images/draw_feature.png");
 filter: alpha(opacity=80);
 margin: 1px;
 padding: 0;
@@ -28,7 +28,7 @@ height: 24px;
 width: 24px;
 line-height: 19px;
 background: rgb(0, 0, 0);
-background-image: url("images/add_point_on.png");
+background-image: url("images/draw_feature.png");
 filter: alpha(opacity=50);
 opacity: 0.5;
 margin: 1px;
