--- a/styles/dynatree/ui.dynatree.css
+++ b/styles/dynatree/ui.dynatree.css
@@ -3,13 +3,13 @@
  */
 ul.dynatree-container
 {
-	font-family: tahoma, arial, helvetica;
-	font-size: 10pt; /* font size should not be too big */
+	font-family: sans-serif;
+	font-size: smaller; /* font size should not be too big */
 	white-space: nowrap;
 	padding: 3px;
 	margin: 0; /* issue 201 */
-	background-color: white;
-	border: 1px dotted gray;
+    color: white;
+    background-color: black;
 	overflow: auto;
 	height: 100%; /* issue 263 */
 }
@@ -29,7 +29,6 @@ ul.dynatree-container li
 	-moz-background-inline-policy: continuous;
 	-moz-background-origin: padding;
 	background-attachment: scroll;
-	background-color: transparent;
 	background-position: 0 0;
 	background-repeat: repeat-y;
 	background-image: none;  /* no v-lines */
@@ -290,7 +289,7 @@ span.dynatree-node
 ul.dynatree-container a
 /*, ul.dynatree-container a:visited*/
 {
-	color: black; /* inherit doesn't work on IE */
+	color: white; /* inherit doesn't work on IE */
 	text-decoration: none;
 	vertical-align: top;
 	margin: 0px;
@@ -299,14 +298,14 @@ ul.dynatree-container a
 	/* Set transparent border to prevent jumping when active node gets a border
 	   (we can do this, because this theme doesn't use vertical lines)
 	   */
-	border: 1px solid white; /* Note: 'transparent' would not work in IE6 */
+	border: 1px solid black; /* Note: 'transparent' would not work in IE6 */
 
 }
 
 ul.dynatree-container a:hover
 {
 /*	text-decoration: underline; */
-	background: #F2F7FD; /* light blue */
+	background: blue; /* light blue */
 	border-color: #B8D6FB; /* darker light blue */
 }
 
@@ -326,12 +325,12 @@ span.dynatree-folder a
 ul.dynatree-container a:focus,
 span.dynatree-focused a:link  /* @IE */
 {
-	background-color: #EFEBDE; /* gray */
+	background-color: gray; /* gray */
 }
 
 span.dynatree-has-children a
 {
-/*	font-style: oblique; /* custom: */
+	font-style: oblique; /* custom: */
 }
 
 span.dynatree-expanded a
@@ -341,13 +340,14 @@ span.dynatree-expanded a
 span.dynatree-selected a
 {
 /*	color: green; */
-	font-style: italic;
+/*	font-style: italic;*/
 }
 
 span.dynatree-active a
 {
+	/* Actvating entries is of no use to us
 	border: 1px solid #99DEFD;
-	background-color: #D8F0FA;
+	background-color: #D8F0FA;*/
 }
 
 /*******************************************************************************
