Added a small legend to the custom layer switcher.
Now alongside each Vector layer a small box with its
fill color (stroke color is ignored) is drawn. Had to
made a few changes in dynatree, and thus I'm uploading
new versions for both the debug and minified format.

--- a/styles/dynatree/ui.dynatree.css
+++ b/styles/dynatree/ui.dynatree.css
@@ -91,6 +91,18 @@ ul.dynatree-container img
 	border-style: none;
 }
 
+/** Used by 'colorBox' node option: */
+ul.dynatree-container .color-box
+{
+    width: 8px;
+    height: 8px;
+    display: inline-block;
+    background-color: #ccc;
+    position: relative;
+    left: 2px;
+    top: 2px;
+}
+
 
 /*******************************************************************************
  * Lines and connectors
