CustomLayerSwitcher fixed for IE.
There were two problems with the Custom Layer
Switcher that IE couldn't get through. The
default keyword isn't accepted for accessing
properties unless it's used with the array
style, and the nodes' text was shown incredibly
small.

--- a/styles/dynatree/ui.dynatree.css
+++ b/styles/dynatree/ui.dynatree.css
@@ -326,6 +326,7 @@ span.dynatree-node a
 	display: inline-block; /* Better alignment, when title contains <br> */
 /*	vertical-align: top;*/
 	padding-left: 3px;
+	font-size: 9px;
 	padding-right: 3px; /* Otherwise italic font will be outside bounds */
 	/*	line-height: 16px; /* should be the same as img height, in case 16 px */
 }
