Cleaned and improved the geojson info popup.
Some improvements have been made in the geojson
info popup control. These include:
- Code cleaning (removing code that remained from
the WMS version).
- Specific class for customizing the popup.
- Option for closing the previous popup when opening
a new one (new parameter in the yaml file).

--- a/src/Control/FeatureInfoGeoJson/FeatureInfoGeoJson.css
+++ b/src/Control/FeatureInfoGeoJson/FeatureInfoGeoJson.css
@@ -34,3 +34,6 @@ opacity: 0.5;
 margin: 1px;
 padding: 0;
 }
+/** Class for customizing the popup dialog **/
+.xvmDestroyableFramedCloudPopupContent {
+}
